Added BiRefNet background remover

--- a/core/resources/src/main/res/values-be/strings.xml
+++ b/core/resources/src/main/res/values-be/strings.xml
@@ -2012,4 +2012,7 @@
     <string name="chunking">Чанкінг</string>
     <string name="model_u2net">Высокадакладная мадэль сегментацыі выявы для выдалення фону</string>
     <string name="model_u2netp">Палегчаная версія U2Net для больш хуткага выдалення фону з меншым выкарыстаннем памяці.</string>
+    <string name="model_ddcolor">Поўная мадэль DDColor забяспечвае высакаякасную афарбоўку агульных малюнкаў з мінімальнымі артэфактамі. Лепшы выбар з усіх мадэляў афарбоўкі.</string>
+    <string name="model_ddcolor_artistic">DDColor Навучаныя і прыватныя наборы мастацкіх дадзеных; стварае разнастайныя і мастацкія вынікі афарбоўвання з меншай колькасцю нерэальных каляровых артэфактаў.</string>
+    <string name="model_birefnet">Лёгкая мадэль BiRefNet на аснове Swin Transformer для дакладнага выдалення фону.</string>
 </resources>
