--- a/core/resources/src/main/res/values-et/strings.xml
+++ b/core/resources/src/main/res/values-et/strings.xml
@@ -2010,4 +2010,7 @@
     <string name="chunking">Tükeldamine</string>
     <string name="model_u2net">Suure täpsusega piltide segmenteerimise mudel tausta eemaldamiseks</string>
     <string name="model_u2netp">U2Neti kerge versioon tausta kiiremaks eemaldamiseks väiksema mälukasutusega.</string>
+    <string name="model_ddcolor">Full DDColor mudel pakub kvaliteetset värvimist üldiste piltide jaoks minimaalsete artefaktidega. Kõigi värvimismudelite parim valik.</string>
+    <string name="model_ddcolor_artistic">DDColor Koolitatud ja privaatsed kunstiandmed; annab mitmekesiseid ja kunstipäraseid värvimistulemusi vähemate ebarealistlike värviartefaktidega.</string>
+    <string name="model_birefnet">Kerge BiRefNet mudel, mis põhineb Swin Transformeril tausta täpseks eemaldamiseks.</string>
 </resources>
