--- a/core/resources/src/main/res/values-it/strings.xml
+++ b/core/resources/src/main/res/values-it/strings.xml
@@ -2010,4 +2010,7 @@
     <string name="chunking">Spezzatura</string>
     <string name="model_u2net">Modello di segmentazione delle immagini ad alta precisione per la rimozione dello sfondo</string>
     <string name="model_u2netp">Versione leggera di U2Net per una rimozione dello sfondo più rapida con un utilizzo ridotto della memoria.</string>
+    <string name="model_ddcolor">Il modello DDColor completo offre una colorazione di alta qualità per immagini generiche con artefatti minimi. La scelta migliore tra tutti i modelli di colorazione.</string>
+    <string name="model_ddcolor_artistic">DDColor Set di dati artistici formati e privati; produce risultati di colorazione diversi e artistici con meno artefatti cromatici non realistici.</string>
+    <string name="model_birefnet">Modello BiRefNet leggero basato su Swin Transformer per una rimozione accurata dello sfondo.</string>
 </resources>
