--- a/core/resources/src/main/res/values-lt/strings.xml
+++ b/core/resources/src/main/res/values-lt/strings.xml
@@ -2013,4 +2013,7 @@
     <string name="chunking">Susmulkinti</string>
     <string name="model_u2net">Didelio tikslumo vaizdo segmentavimo modelis, skirtas fono pašalinimui</string>
     <string name="model_u2netp">Lengva U2Net versija, skirta greičiau pašalinti foną naudojant mažiau atminties.</string>
+    <string name="model_ddcolor">Visas DDColor modelis užtikrina aukštos kokybės bendrų vaizdų spalvinimą su minimaliais artefaktais. Geriausias pasirinkimas iš visų spalvinimo modelių.</string>
+    <string name="model_ddcolor_artistic">DDColor Išmokyti ir privatūs meniniai duomenų rinkiniai; sukuria įvairius ir meniškus spalvinimo rezultatus su mažiau nerealių spalvų artefaktų.</string>
+    <string name="model_birefnet">Lengvas BiRefNet modelis, pagrįstas Swin Transformer, kad būtų galima tiksliai pašalinti foną.</string>
 </resources>
