--- a/core/resources/src/main/res/values-nl/strings.xml
+++ b/core/resources/src/main/res/values-nl/strings.xml
@@ -2010,4 +2010,7 @@
     <string name="chunking">Chunken</string>
     <string name="model_u2net">Zeer nauwkeurig beeldsegmentatiemodel voor het verwijderen van achtergronden</string>
     <string name="model_u2netp">Lichtgewicht versie van U2Net voor snellere achtergrondverwijdering met kleiner geheugengebruik.</string>
+    <string name="model_ddcolor">Het volledige DDColor-model levert hoogwaardige inkleuring voor algemene afbeeldingen met minimale artefacten. Beste keuze van alle inkleuringsmodellen.</string>
+    <string name="model_ddcolor_artistic">DDColor Getrainde en particuliere artistieke datasets; produceert diverse en artistieke kleurresultaten met minder onrealistische kleurartefacten.</string>
+    <string name="model_birefnet">Lichtgewicht BiRefNet-model gebaseerd op Swin Transformer voor nauwkeurige achtergrondverwijdering.</string>
 </resources>
