--- a/core/resources/src/main/res/values-ro/strings.xml
+++ b/core/resources/src/main/res/values-ro/strings.xml
@@ -2011,4 +2011,7 @@
     <string name="chunking">Bucățire</string>
     <string name="model_u2net">Model de segmentare a imaginii de mare precizie pentru eliminarea fundalului</string>
     <string name="model_u2netp">Versiune ușoară a U2Net pentru eliminarea mai rapidă a fundalului cu o utilizare mai mică a memoriei.</string>
+    <string name="model_ddcolor">Modelul complet DDColor oferă o colorare de înaltă calitate pentru imagini generale cu artefacte minime. Cea mai bună alegere dintre toate modelele de colorare.</string>
+    <string name="model_ddcolor_artistic">DDColor Seturi de date artistice antrenate și private; produce rezultate de colorare diverse și artistice cu mai puține artefacte de culoare nerealiste.</string>
+    <string name="model_birefnet">Model ușor BiRefNet bazat pe Swin Transformer pentru eliminarea precisă a fundalului.</string>
 </resources>
