--- a/core/resources/src/main/res/values-sr/strings.xml
+++ b/core/resources/src/main/res/values-sr/strings.xml
@@ -2011,4 +2011,7 @@
     <string name="chunking">Цхункинг</string>
     <string name="model_u2net">Модел сегментације слике високе прецизности за уклањање позадине</string>
     <string name="model_u2netp">Лагана верзија У2Нета за брже уклањање позадине уз мању употребу меморије.</string>
+    <string name="model_ddcolor">Пун модел ДДЦолор пружа висококвалитетну колоризацију за опште слике са минималним артефактима. Најбољи избор од свих модела колоризације.</string>
+    <string name="model_ddcolor_artistic">ДДЦолор Обучени и приватни уметнички скупови података; производи разноврсне и уметничке резултате колоризације са мање нереалних артефаката у боји.</string>
+    <string name="model_birefnet">Лагани БиРефНет модел заснован на Свин Трансформеру за прецизно уклањање позадине.</string>
 </resources>
