--- a/core/resources/src/main/res/values-ta/strings.xml
+++ b/core/resources/src/main/res/values-ta/strings.xml
@@ -2010,4 +2010,7 @@
     <string name="chunking">துண்டித்தல்</string>
     <string name="model_u2net">பின்னணியை அகற்றுவதற்கான உயர் துல்லியமான படப் பிரிவு மாதிரி</string>
     <string name="model_u2netp">U2Net இன் இலகுரக பதிப்பு, சிறிய நினைவகப் பயன்பாட்டுடன் வேகமான பின்னணியை அகற்றும்.</string>
+    <string name="model_ddcolor">முழு DDColor மாதிரியானது குறைந்தபட்ச கலைப்பொருட்கள் கொண்ட பொதுவான படங்களுக்கு உயர்தர வண்ணமயமாக்கலை வழங்குகிறது. அனைத்து வண்ணமயமாக்கல் மாதிரிகளின் சிறந்த தேர்வு.</string>
+    <string name="model_ddcolor_artistic">DDColor பயிற்சி பெற்ற மற்றும் தனிப்பட்ட கலை தரவுத்தொகுப்புகள்; குறைவான யதார்த்தமற்ற வண்ண கலைப்பொருட்களுடன் மாறுபட்ட மற்றும் கலை வண்ணமயமாக்கல் முடிவுகளை உருவாக்குகிறது.</string>
+    <string name="model_birefnet">துல்லியமான பின்னணியை அகற்றுவதற்காக ஸ்வின் டிரான்ஸ்ஃபார்மரை அடிப்படையாகக் கொண்ட இலகுரக BiRefNet மாதிரி.</string>
 </resources>
