--- a/core/resources/src/main/res/values-ar/strings.xml
+++ b/core/resources/src/main/res/values-ar/strings.xml
@@ -2014,4 +2014,7 @@
     <string name="chunking">التقطيع</string>
     <string name="model_u2net">نموذج تجزئة الصور عالي الدقة لإزالة الخلفية</string>
     <string name="model_u2netp">إصدار خفيف الوزن من U2Net لإزالة الخلفية بشكل أسرع مع استخدام ذاكرة أصغر.</string>
+    <string name="model_ddcolor">يوفر نموذج DDColor الكامل تلوينًا عالي الجودة للصور العامة مع الحد الأدنى من الشوائب. أفضل خيار لجميع نماذج التلوين.</string>
+    <string name="model_ddcolor_artistic">مجموعات البيانات الفنية الخاصة والمدربة على DDColor؛ ينتج نتائج تلوين متنوعة وفنية مع عدد أقل من التحف اللونية غير الواقعية.</string>
+    <string name="model_birefnet">نموذج BiRefNet خفيف الوزن يعتمد على Swin Transformer لإزالة الخلفية بدقة.</string>
 </resources>
