--- a/core/resources/src/main/res/values-iw/strings.xml
+++ b/core/resources/src/main/res/values-iw/strings.xml
@@ -2012,4 +2012,7 @@
     <string name="chunking">צ\'אנקינג</string>
     <string name="model_u2net">מודל פילוח תמונה ברמת דיוק גבוהה להסרת רקע</string>
     <string name="model_u2netp">גרסה קלת משקל של U2Net להסרת רקע מהירה יותר עם שימוש קטן יותר בזיכרון.</string>
+    <string name="model_ddcolor">דגם DDColor מלא מספק צביעה באיכות גבוהה לתמונות כלליות עם חפצים מינימליים. הבחירה הטובה ביותר מכל דגמי הצביעה.</string>
+    <string name="model_ddcolor_artistic">מערכי נתונים אומנותיים פרטיים מאומנים ב-DDColor; מייצר תוצאות צביעה מגוונות ואמנותיות עם פחות חפצי צבע לא מציאותיים.</string>
+    <string name="model_birefnet">דגם BiRefNet קל משקל המבוסס על Swin Transformer להסרת רקע מדויקת.</string>
 </resources>
