--- a/core/resources/src/main/res/values-mr/strings.xml
+++ b/core/resources/src/main/res/values-mr/strings.xml
@@ -2011,4 +2011,7 @@
     <string name="chunking">चंकिंग</string>
     <string name="model_u2net">पार्श्वभूमी काढण्यासाठी उच्च-अचूकता प्रतिमा विभाजन मॉडेल</string>
     <string name="model_u2netp">लहान मेमरी वापरासह जलद पार्श्वभूमी काढण्यासाठी U2Net ची हलकी आवृत्ती.</string>
+    <string name="model_ddcolor">पूर्ण DDCcolor मॉडेल किमान कलाकृतींसह सामान्य प्रतिमांसाठी उच्च-गुणवत्तेचे रंगीकरण प्रदान करते. सर्व रंगीकरण मॉडेल्सची सर्वोत्तम निवड.</string>
+    <string name="model_ddcolor_artistic">DDColor प्रशिक्षित आणि खाजगी कलात्मक डेटासेट; कमी अवास्तव कलर आर्टिफॅक्ट्ससह वैविध्यपूर्ण आणि कलात्मक रंगीकरण परिणाम तयार करते.</string>
+    <string name="model_birefnet">अचूक पार्श्वभूमी काढण्यासाठी स्विन ट्रान्सफॉर्मरवर आधारित लाइटवेट BiRefNet मॉडेल.</string>
 </resources>
