--- a/core/resources/src/main/res/values-pa/strings.xml
+++ b/core/resources/src/main/res/values-pa/strings.xml
@@ -2010,4 +2010,7 @@
     <string name="chunking">ਚੁੰਨੀ</string>
     <string name="model_u2net">ਪਿਛੋਕੜ ਨੂੰ ਹਟਾਉਣ ਲਈ ਉੱਚ-ਸ਼ੁੱਧਤਾ ਚਿੱਤਰ ਵਿਭਾਜਨ ਮਾਡਲ</string>
     <string name="model_u2netp">ਛੋਟੀ ਮੈਮੋਰੀ ਵਰਤੋਂ ਦੇ ਨਾਲ ਤੇਜ਼ ਪਿਛੋਕੜ ਨੂੰ ਹਟਾਉਣ ਲਈ U2Net ਦਾ ਹਲਕਾ ਸੰਸਕਰਣ।</string>
+    <string name="model_ddcolor">ਪੂਰਾ DDCcolor ਮਾਡਲ ਘੱਟੋ-ਘੱਟ ਕਲਾਤਮਕ ਚੀਜ਼ਾਂ ਦੇ ਨਾਲ ਆਮ ਚਿੱਤਰਾਂ ਲਈ ਉੱਚ-ਗੁਣਵੱਤਾ ਰੰਗੀਕਰਨ ਪ੍ਰਦਾਨ ਕਰਦਾ ਹੈ। ਸਾਰੇ ਰੰਗੀਕਰਨ ਮਾਡਲਾਂ ਦੀ ਸਭ ਤੋਂ ਵਧੀਆ ਚੋਣ।</string>
+    <string name="model_ddcolor_artistic">ਡੀਡੀਕਲਰ ਸਿਖਲਾਈ ਪ੍ਰਾਪਤ ਅਤੇ ਨਿੱਜੀ ਕਲਾਤਮਕ ਡੇਟਾਸੇਟ; ਘੱਟ ਗੈਰ-ਯਥਾਰਥਵਾਦੀ ਰੰਗਾਂ ਦੀਆਂ ਕਲਾਕ੍ਰਿਤੀਆਂ ਦੇ ਨਾਲ ਵਿਭਿੰਨ ਅਤੇ ਕਲਾਤਮਕ ਰੰਗੀਕਰਨ ਨਤੀਜੇ ਪੈਦਾ ਕਰਦਾ ਹੈ।</string>
+    <string name="model_birefnet">ਬੈਕਗਰਾਊਂਡ ਨੂੰ ਸਹੀ ਤਰ੍ਹਾਂ ਹਟਾਉਣ ਲਈ ਸਵਿਨ ਟਰਾਂਸਫਾਰਮਰ \'ਤੇ ਆਧਾਰਿਤ ਲਾਈਟਵੇਟ BiRefNet ਮਾਡਲ।</string>
 </resources>
