--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2012,4 +2012,7 @@
     <string name="chunking">Фрагментация</string>
     <string name="model_u2net">Высокоточная модель сегментации изображения для удаления фона</string>
     <string name="model_u2netp">Облегченная версия U2Net для более быстрого удаления фона с меньшим использованием памяти.</string>
+    <string name="model_ddcolor">Модель Full DDColor обеспечивает высококачественную раскраску обычных изображений с минимальными артефактами. Лучший выбор из всех моделей раскрашивания.</string>
+    <string name="model_ddcolor_artistic">DDColor Обученные и частные художественные наборы данных; дает разнообразные и художественные результаты раскрашивания с меньшим количеством нереалистичных цветовых артефактов.</string>
+    <string name="model_birefnet">Легкая модель BiRefNet на основе Swin Transformer для точного удаления фона.</string>
 </resources>
