--- a/core/resources/src/main/res/values-te/strings.xml
+++ b/core/resources/src/main/res/values-te/strings.xml
@@ -2010,4 +2010,7 @@
     <string name="chunking">చంకింగ్</string>
     <string name="model_u2net">బ్యాక్‌గ్రౌండ్ రిమూవల్ కోసం హై-కచ్చితత్వంతో కూడిన ఇమేజ్ సెగ్మెంటేషన్ మోడల్</string>
     <string name="model_u2netp">తక్కువ మెమరీ వినియోగంతో వేగవంతమైన నేపథ్య తొలగింపు కోసం U2Net యొక్క తేలికపాటి వెర్షన్.</string>
+    <string name="model_ddcolor">పూర్తి DDColor మోడల్ కనీస కళాఖండాలతో సాధారణ చిత్రాల కోసం అధిక-నాణ్యత రంగులను అందిస్తుంది. అన్ని రంగుల నమూనాల ఉత్తమ ఎంపిక.</string>
+    <string name="model_ddcolor_artistic">DDColor శిక్షణ పొందిన మరియు ప్రైవేట్ కళాత్మక డేటాసెట్‌లు; తక్కువ అవాస్తవిక రంగు కళాఖండాలతో విభిన్న మరియు కళాత్మక రంగుల ఫలితాలను ఉత్పత్తి చేస్తుంది.</string>
+    <string name="model_birefnet">ఖచ్చితమైన బ్యాక్‌గ్రౌండ్ రిమూవల్ కోసం స్విన్ ట్రాన్స్‌ఫార్మర్ ఆధారంగా తేలికైన BiRefNet మోడల్.</string>
 </resources>
