--- a/core/resources/src/main/res/values-th/strings.xml
+++ b/core/resources/src/main/res/values-th/strings.xml
@@ -2009,4 +2009,7 @@
     <string name="chunking">ก้อน</string>
     <string name="model_u2net">โมเดลการแบ่งส่วนภาพที่มีความแม่นยำสูงสำหรับการลบพื้นหลัง</string>
     <string name="model_u2netp">U2Net เวอร์ชันน้ำหนักเบาเพื่อการลบพื้นหลังที่รวดเร็วขึ้นโดยใช้หน่วยความจำน้อยลง</string>
+    <string name="model_ddcolor">โมเดล DDColor เต็มรูปแบบมอบการปรับสีคุณภาพสูงสำหรับภาพทั่วไปที่มีจุดบกพร่องน้อยที่สุด ตัวเลือกที่ดีที่สุดของโมเดลการปรับสีทั้งหมด</string>
+    <string name="model_ddcolor_artistic">ชุดข้อมูลศิลปะที่ได้รับการฝึกอบรมและส่วนตัวของ DDColor สร้างผลลัพธ์การให้สีที่หลากหลายและเป็นศิลปะโดยมีสิ่งเจือปนของสีที่ไม่สมจริงน้อยลง</string>
+    <string name="model_birefnet">รุ่น BiRefNet น้ำหนักเบาที่ใช้ Swin Transformer เพื่อการลบพื้นหลังที่แม่นยำ</string>
 </resources>
