--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2033,4 +2033,5 @@
     <string name="model_u2netp">Lightweight version of U2Net for faster background removing with smaller memory usage.</string>
     <string name="model_ddcolor">Full DDColor model delivers high-quality colorization for general images with minimal artifacts. Best choice of all colorization models.</string>
     <string name="model_ddcolor_artistic">DDColor Trained and private artistic datasets; produces diverse and artistic colorization results with fewer unrealistic color artifacts.</string>
+    <string name="model_birefnet">Lightweight BiRefNet model based on Swin Transformer for accurate background removing.</string>
 </resources>
